--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.26/vue.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/vue-resource/1.0.3/vue-resource.min.js"></script>
-	<script sc="./script.js"></script>
+	<script src="./script.js"></script>
 </body>
 </html>
