--- a/index.html
+++ b/index.html
@@ -7,38 +7,46 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-	<div id="app">
-		Chat logs for adam13531 as of {{ formatedLoadTime }}
-		<table class="table table-bordered table-hover dataTable">
-			<thead>
-				<th>Created At</th>
-				<th>Display Name</th>
-				<th>Message</th>
-			</thead>
-			<tbody class="hide" v-el:loop>
-				<tr v-for="message in logs">
-					<td style="vertical-align: middle; width: 15%">{{ message.created_at }} UTC</td>
-					<td style="vertical-align: middle">{{ message.display_name }}</td>
-					<td style="vertical-align: middle">{{{ message.message }}}</td>
-				</tr>
+	<div id="app" style="padding: 10px;">
+		<div class="container-fluid" style="background: #fff;box-shadow: 1px 1px 10px rgba(0,0,0,0.3);padding-top:10px;padding-bottom:10px;">
+			<div class="row">
+				<div class="col-md-12">
+					Chat logs for adam13531 as of {{ formatedLoadTime }}
+					<table class="table table-bordered table-hover dataTable">
+						<thead>
+							<th>Created At</th>
+							<th>Display Name</th>
+							<th>Message</th>
+						</thead>
+						<tbody class="hide" v-el:loop>
+							<tr v-for="message in logs">
+								<td style="vertical-align: middle; width: 15%">{{ message.created_at }} UTC</td>
+								<td style="vertical-align: middle">{{ message.display_name }}</td>
+								<td style="vertical-align: middle">{{{ message.message }}}</td>
+							</tr>
 
-				<tr v-if="!logs">
-					<td colspan="3">No records found.</td>
-				</tr>
-			</tbody>
+							<tr v-if="!logs">
+								<td colspan="3">No records found.</td>
+							</tr>
+						</tbody>
 
-			<tbody v-if="loading">
-				<tr>
-					<td colspan="3" class="text-center"><img src="https://mcsmike.mnt.co/assets/img/loader.svg" width="32" height="32" alt="Loading..."></td>
-				</tr>
-			</tbody>
-		</table>
+						<tbody v-if="loading">
+							<tr>
+								<td colspan="3" class="text-center"><img src="https://mcsmike.mnt.co/assets/img/loader.svg" width="32" height="32" alt="Loading..."></td>
+							</tr>
+						</tbody>
+					</table>
 
-		<a class="btn btn-default" :disabled="noMoreResults || loading" @click="loadMore()">Load More</a>
+					<a class="btn btn-default" :disabled="noMoreResults || loading" @click="loadMore()">Load More</a>
+				</div>
+			</div>
+		</div>
 	</div>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.26/vue.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/vue-resource/1.0.3/vue-resource.min.js"></script>
-	<script src="./script.js"></script>
+	<script src="./js/TwitchEmotes.js"></script>
+	<script src="./js/BTTVEmotes.js"></script>
+	<script src="./js/script.js"></script>
 </body>
 </html>
