Added search functionality. Added simple js build system using gulp & browserify.

--- a/index.html
+++ b/index.html
@@ -11,42 +11,81 @@
 		<div class="container-fluid" style="background: #fff;box-shadow: 1px 1px 10px rgba(0,0,0,0.3);padding-top:10px;padding-bottom:10px;">
 			<div class="row">
 				<div class="col-md-12">
-					Chat logs for adam13531 as of {{ formatedLoadTime }}
-					<table class="table table-bordered table-hover dataTable">
-						<thead>
-							<th>Created At</th>
-							<th>Display Name</th>
-							<th>Message</th>
-						</thead>
-						<tbody class="hide" v-el:loop>
-							<tr v-for="message in logs">
-								<td style="vertical-align: middle; width: 15%">{{ message.created_at }}</td>
-								<td style="vertical-align: middle">{{ message.display_name }}</td>
-								<td style="vertical-align: middle">{{{ message.message }}}</td>
-							</tr>
+					<p>Chat logs for adam13531 as of {{ formatedLoadTime }}</p>
+				</div>
 
-							<tr v-if="!logs">
-								<td colspan="3">No records found.</td>
-							</tr>
-						</tbody>
+				<div class="col-md-9">
+                    <input type="search" class="form-control" v-model="searchKeyword" @keyup.enter="search()" placeholder="search messages">
+                    <br>
+                </div>
 
-						<tbody v-if="loading">
-							<tr>
-								<td colspan="3" class="text-center"><img src="https://mcsmike.mnt.co/assets/img/loader.svg" width="32" height="32" alt="Loading..."></td>
-							</tr>
-						</tbody>
-					</table>
+                <div class="col-md-3">
+                    <div class="btn-group" style="width: 100%;">
+                        <button class="btn btn-primary" style="width: 50%;" :disabled="loading" @click="search()">Search</button>
+                        <button class="btn btn-default" style="width: 50%;" :disabled="loading" @click="reset()">Reset</button>
+                    </div>
+                    <br>
+                </div>
 
-					<a class="btn btn-default" :disabled="noMoreResults || loading" @click="loadMore()">Load More</a>
+				<div class="col-md-12">
+					<div v-if="isConversation">
+                        <p><strong>Currently showing conversation around: {{ formatDisplayDate(highlight.created_at) }}</strong></p>
+                    </div>
+
+                    <div v-if="isSearch">
+                        <p><strong>Currently showing search results for: {{ searchKeyword }}</strong></p>
+                    </div>
+
+                    <table class="table table-bordered table-hover dataTable">
+                        <thead v-if="!isSearch">
+                            <th style="width: 15%;">Created At</th>
+                            <th style="width: 10%;">Display Name</th>
+                            <th style="width: 75%;">Message</th>
+                        </thead>
+
+                        <thead v-if="isSearch">
+                            <th style="width: 15%;">Created At</th>
+                            <th style="width: 10%;">Display Name</th>
+                            <th style="width: 65%;">Message</th>
+                            <th style="width: 10%" v-if="isSearch">--</th>
+                        </thead>
+
+                        <tbody class="hide">
+                            <tr v-if="showLoadNewer">
+                                <td colspan="3" class="text-center" @click="loadNewer()" style="cursor: pointer;"><a>Load newer</a></td>
+                            </tr>
+
+                            <tr v-if="loadingTop">
+                                <td colspan="3" class="text-center"><img src="https://mcsmike.mnt.co/assets/img/loader.svg" width="32" height="32" alt="Loading..."></td>
+                            </tr>
+
+                            <tr v-for="message in logs" :class="{ 'highlight-message': message.highlight }">
+                                <td style="vertical-align: middle">{{ formatDisplayDate(message.created_at) }}</td>
+                                <td style="vertical-align: middle">{{ message.display_name || message.username }}</td>
+                                <td style="vertical-align: middle;">{{{ message.message }}}</td>
+                                <td style="vertical-align: middle" v-if="isSearch"><a style="cursor: pointer;" @click="conversation(message)">Show Conversation</a></td>
+                            </tr>
+
+                            <tr v-if="showLoadOlder">
+                                <td colspan="3" class="text-center" @click="loadOlder()" style="cursor: pointer;"><a>Load older</a></td>
+                            </tr>
+
+                            <tr v-if="logs.length === 0 && loadingBottom === false">
+                                <td colspan="{{ isSearch ? 4 : 3 }}" >No records found.</td>
+                            </tr>
+                        </tbody>
+
+                        <tbody v-if="loadingBottom">
+                            <tr>
+                                <td colspan="{{ isSearch ? 4 : 3 }}" class="text-center"><img src="https://mcsmike.mnt.co/assets/img/loader.svg" width="32" height="32" alt="Loading..."></td>
+                            </tr>
+                        </tbody>
+                    </table>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.26/vue.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/vue-resource/1.0.3/vue-resource.min.js"></script>
-	<script src="./js/TwitchEmotes.js"></script>
-	<script src="./js/BTTVEmotes.js"></script>
 	<script src="./js/script.js"></script>
 </body>
 </html>
