--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 	<meta name="viewport" content="width=device-width">
 	<title>Adam13531 Chat Logs</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+	<style>
+	.table td {
+		word-break: break-all;
+	}
+
+	.highlight-message {
+		background: orange;
+	}
+	</style>
 </head>
 <body>
 	<div id="app" style="padding: 10px;">
